# CleanArchitectureCPlusPlus

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt
app/include/app/: CompositionRoot.hpp
app/qml/: Main.qml
app/qml/components/: DetailField.qml
app/qml/styles/: Theme.qml
app/qml/views/: MachineListView.qml
app/src/: CompositionRoot.cpp  main.cpp
application/: CMakeLists.txt
application/include/application/common/: Result.hpp
application/include/application/ports/: ILogger.hpp
application/include/application/usecases/: LoadMachinesUseCase.hpp
application/src/: LoadMachinesUseCase.cpp
docs/: 00-getting-started.md  01-architecture.md  02-build-and-run.md  03-module-reference.md  04-qml-ui.md  05-dependency-injection.md  06-testing.md  07-troubleshooting.md  08-extending-with-gpu.md  09-dataflow-sequence.md  README.md
docs/adr/: ADR-0001-clean-architecture-layering.md  ADR-0002-mvvm-qml-viewmodel-boundary.md  ADR-0003-composition-root-constructor-di.md  ADR-0004-windows-deployment-windeployqt.md  README.md
domain/: CMakeLists.txt
domain/include/domain/entities/: Machine.hpp
domain/include/domain/repositories/: IMachineRepository.hpp
domain/src/: Machine.cpp
infrastructure/: CMakeLists.txt
infrastructure/include/infrastructure/logging/: ConsoleLogger.hpp
infrastructure/include/infrastructure/repositories/: InMemoryMachineRepository.hpp
infrastructure/src/logging/: ConsoleLogger.cpp
infrastructure/src/repositories/: InMemoryMachineRepository.cpp
presentation/: CMakeLists.txt
presentation/include/presentation/models/: MachineListModel.hpp
presentation/include/presentation/viewmodels/: MachineListViewModel.hpp
presentation/src/models/: MachineListModel.cpp
presentation/src/viewmodels/: MachineListViewModel.cpp
tests/: CMakeLists.txt
tests/application/: LoadMachinesUseCaseTests.cpp
tests/domain/: MachineTests.cpp
